src/sass/partials/_base.scss
//// RESET ////

*,
*:after,
*::before {
  margin: 0;
  padding: 0;
  box-sizing: inherit;
}

html {
  box-sizing: border-box;
  overflow-x: hidden;
}

body {
  font-family: "Montserrat", sans-serif;
  text-transform: uppercase;
  font-weight: 300;
  overflow-x: hidden;
  overscroll-behavior: none;
}

App {
  position: relative;
}

::-webkit-scrollbar {
  width: 3px;
  /* remove scrollbar space */
  background: transparent;
  /* optional: just make scrollbar invisible */
}

::-webkit-scrollbar-thumb {
  background: $color-secondary-light;
}

